--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -25,12 +25,13 @@ font-size: 20px;
 
 border:3px inset rgb(44, 43, 43);
 
+margin-top: 20px;
+
 margin-bottom: 20px;
 }
 
 nav
 {
-
 
 font-family: Verdana, Geneva, Tahoma, sans-serif;
     /* Seleccianamos la fuente */
@@ -63,6 +64,7 @@ border: 5px  rgb(105, 110, 107) outset;
 
 font-size: 20px;
 }
+
 .logo
 {
     border: 5px  rgb(105, 110, 107) inset;
@@ -71,12 +73,9 @@ font-size: 20px;
 
 h3
 {
-  
     font-size: 30px;
     color: rgb(105, 110, 107);
     background-color: rgb(180, 177, 172);
-   
-     
 }
 
 h4
@@ -195,6 +194,8 @@ display: block;
 {
     height: 40vh;
     object-fit: cover;
+    border: 5px  rgb(105, 110, 107) inset;  
+    margin-bottom: 20px;
 }
 .index2
 {
