--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -109,55 +109,17 @@ figcaption
     background-color: rgb(117, 108, 108);
     color: black;
     font-style: italic;
+    
+}
+.index3
+{
+    height: 20%;
+    display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
 }
 
-.terceraSeccionIndex
-{
-    grid-area: seccion3;
-    background-color: rgb(116, 142, 180);
-    height: 50vh;
-    width: 50vw;
-    align-items: center;
-    justify-content: center;
-}
-.terceraSeccionIndexA
-{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 2vh;
-    margin-top: 2vh;
-}
-.terceraSeccionIndexB
-{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 3vh;
-    margin-top: 3vh;
-}
- 
-.terceraSeccionIndexC
-{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-  
-}  
-
-.terceraSeccionIndexD
-{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    margin-top: 2vh;
-  
-}  
 
 /* Estilos para Fondos */
 footer
