--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -87,6 +87,10 @@ h4
     font-size: 17px;
     color: rgb(108, 120, 173);
 }
+section div div h4
+{
+    margin-bottom: 20px;
+}
 
 /* Cuando llamamos a una clase va . antes del nombre */
 /* Cuando llamamos a un id va # antes del nombre */
