Cambios escuela saldias centro

--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -191,6 +191,10 @@ footer a img
 {
     border: 5px  rgb(105, 110, 107) inset;  
 }
+.escuela-saldias
+{
+    border: 5px  rgb(105, 110, 107) inset;
+}
 .img-logofooter
 {
     display: inline-block;
