--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -1,4 +1,4 @@
-@import "fuentes" , "variables" , "titulos" , "general" ,"header" , "carousel" , "home" , "ubicacion" , "footer";
+@import "fuentes" , "variables" , "titulos" , "general" ,"header" , "carousel" , "home" , "contacto" , "ubicacion" , "footer";
 /* Esto es un comentario */
 /* ctrl + k + u */
 
