--- a/scss/_titulos.scss
+++ b/scss/_titulos.scss
@@ -2,7 +2,7 @@
 h3 {
 	margin-top: 20px;
 	margin-bottom: 20px;
-	font-size: 30px;
+	font-size: 2rem;
 	color: $color_3;
 	background-color: $background-color_2;
 }
