--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -14,3 +14,21 @@
 	align-items: center;
 	justify-content: center;
 }
+
+.index5 {
+	height: 30%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+.index5 div div p {
+	margin-right: 10px;
+	margin-left: 10px;
+}
+
+.index5 div h3{
+	margin-right: 20px;
+	margin-left: 20px;	
+	font-size: 1.2rem;
+	align-items: center;
+}
