--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -17,6 +17,7 @@
 
 .index5 {
 	height: 30%;
+	background: linear-gradient( to top right, #45b39d, #5f7e78);
 	display: flex;
 	align-items: center;
 	justify-content: center;
