--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -9,7 +9,7 @@ h3 {
 
 h4 {
   text-transform: uppercase;
-  font-size: 17px;
+  font-size: 1rem;
   color: rgb(108, 120, 173);
 }
 
@@ -97,6 +97,7 @@ a {
 
 .index5 {
   height: 30%;
+  background: linear-gradient(to top right, #45b39d, #5f7e78);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -115,7 +116,7 @@ a {
 }
 
 .index5 {
-  font-size: 1.2rem;
+  font-size: 1rem;
   flex-direction: column;
   background-color: #6f9daf;
 }
