--- a/scss/_fuentes.scss
+++ b/scss/_fuentes.scss
@@ -1,1 +1,5 @@
 @import "https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;1,100&display=swap";
+
+html{
+    font-size: 62.5%;
+}
