--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -2,15 +2,21 @@
 footer 
 {
 	background-color: $background-color_5;
+	background: linear-gradient( to top, #45b39d, $background-color_5);
 	text-align: center;
 	font-weight: bold;
 	font-family: $font-family_2;
-	font-size: 10px;
+	font-size: 1rem;
 	display: block;
 	a {
 		border: 0;
 		img {
 			border: 4px cadetblue outset;
+			transition: width 1s, height 1s;
+		}
+		img:hover{
+			height: 5.7rem;
+			width: 9.7rem;
 		}
 	}
 }
@@ -22,9 +28,9 @@ footer
 }
 .logo-footer {
 	color: $color_2;
-	font-size: 15px;
+	font-size: 1.5rem;
 	border: 5px rgb(105, 110, 107) inset;
-	padding: 10px 10px;
-	margin-top: 10px;
-	margin-bottom: 10px;
+	padding: 1rem 1rem;
+	margin-top: 1rem;
+	margin-bottom: 1rem;
 }
