--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -1,7 +1,5 @@
 
-.index1 {
-	height: 41.5vh;
-}
+
 
 .index2 {
 	height: 50%;
@@ -9,27 +7,33 @@
 }
 .index3 {
 	height: 20%;
+	background: linear-gradient( to bottom, #45b39d, #5f7e78);
 	display: flex;
 	flex-direction: row;
 	align-items: center;
 	justify-content: center;
 }
+.index3 div figure img{
+	border: 5px rgb(105, 110, 107) inset;
+}
+
+
 
 .index5 {
 	height: 30%;
-	background: linear-gradient( to top right, #45b39d, #5f7e78);
 	display: flex;
 	align-items: center;
 	justify-content: center;
 }
+
 .index5 div div p {
-	margin-right: 10px;
-	margin-left: 10px;
+	margin: 1rem;
+	align-items: center;
+	justify-content: center;
 }
 
 .index5 div h3{
-	margin-right: 20px;
-	margin-left: 20px;	
-	font-size: 1.2rem;
-	align-items: center;
+	display: inline;
+	margin: 1rem;	
+	font-size: 2rem;
 }
