--- a/scss/_titulos.scss
+++ b/scss/_titulos.scss
@@ -1,4 +1,13 @@
 
+
+h2 {
+	margin-top: 20px;
+	margin-bottom: 20px;
+	font-size: 2.5rem;
+	color: $color_3;
+	background-color: $background-color_2;
+}
+
 h3 {
 	margin-top: 20px;
 	margin-bottom: 20px;
@@ -9,11 +18,13 @@ h3 {
 
 h4 {
 	text-transform: uppercase;
-	font-size: 1rem;
+	font-size: 1.5rem;
 	color: $color_4;
 }
 
 figcaption {
+	
+	font-size: 1.7rem;
 	background-color: $background-color_4;
 	color: $color_2;
 	font-style: italic;
