--- a/scss/_titulos.scss
+++ b/scss/_titulos.scss
@@ -35,3 +35,10 @@ figcaption {
 .escuela {
 	border: 5px rgb(105, 110, 107) inset;
 }
+
+section div div p{
+	font-size: 1.7rem;
+}
+nav div div ul li ul li a{
+	font-size: 1.7rem;
+}
