--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -45,6 +45,39 @@ nav div div ul li ul li a {
   font-size: 1.7rem;
 }
 
+@keyframes texto {
+  0% {
+    opacity: 0;
+  }
+  20% {
+    opacity: 100%;
+    background: linear-gradient(to left top, #45b39d, #5f7e78);
+  }
+  40% {
+    color: yellowgreen;
+    background: linear-gradient(to left bottom, #45b39d, #5f7e78);
+  }
+  60% {
+    opacity: 0;
+    background: linear-gradient(to right bottom, #45b39d, #5f7e78);
+  }
+  80% {
+    color: rgb(190, 103, 103);
+    opacity: 100%;
+    background: linear-gradient(to left bottom, #45b39d, #5f7e78);
+  }
+  100% {
+    background: linear-gradient(to left top, #45b39d, #5f7e78);
+    opacity: 0;
+  }
+}
+h1 {
+  padding: 20px;
+  animation-name: texto;
+  animation-duration: 4s;
+  animation-iteration-count: infinite;
+}
+
 * {
   margin: 0;
   padding: 0;
