--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -1,15 +1,26 @@
 
 
-
+.row {
+	width: 100%;
+}
 .index2 {
-	height: 50%;
+	width: 100%;
 	background-color: $background-color_6;
 }
+.index21{
+	width: 50%;
+	background-color: $background-color_6;
+}
+.index22{
+	width: 50%;
+	background-color: $background-color_6;
+}
+
 .index3 {
 	height: 20%;
 	background: linear-gradient( to bottom, #45b39d, #5f7e78);
 	display: flex;
-	flex-direction: row;
+	flex-direction: flex;
 	align-items: center;
 	justify-content: center;
 }
