--- a/scss/_titulos.scss
+++ b/scss/_titulos.scss
@@ -1,20 +1,22 @@
 
 
 h2 {
-	margin-top: 20px;
-	margin-bottom: 20px;
-	font-size: 2.5rem;
+	text-transform: uppercase;
+	margin-top: 1.5rem;
+	margin-bottom: 1.5rem;
+	font-size: 2rem;
 	color: $color_3;
 	background-color: $background-color_2;
 }
 
 h3 {
-	margin-top: 20px;
-	margin-bottom: 20px;
-	font-size: 2rem;
+	text-transform: uppercase;
+	margin-top: 15px;
+	margin-bottom: 15px;
+	font-size: 1.7rem;
 	color: $color_3;
 	background-color: $background-color_2;
-}
+	}
 
 h4 {
 	text-transform: uppercase;
@@ -23,7 +25,7 @@ h4 {
 }
 
 figcaption {
-	
+
 	font-size: 1.5rem;
 	background-color: $background-color_4;
 	color: $color_2;
@@ -72,7 +74,10 @@ nav div div ul li ul li a{
 }
 
 h1 {
-	padding: 20px;
+	margin: auto;
+	text-transform: uppercase;
+	font-size: 1.3rem;
+	padding: 5px;
     animation-name: texto;
     animation-duration: 4s;
     animation-iteration-count: infinite;
