--- a/scss/_titulos.scss
+++ b/scss/_titulos.scss
@@ -5,7 +5,7 @@ h2 {
 	margin-top: 1.5rem;
 	margin-bottom: 1.5rem;
 	font-size: 2rem;
-	color: $color_3;
+	color: black;
 	background-color: $background-color_2;
 }
 
